--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ ol,.c20
   <h1 class="c16"><span>The Electronic End User License Agreement Abstract
   (EEULAA)</span></h1>
 
-  <p class="c0"><span>2010-01-13</span></p>
+  <p class="c0"><span>2010-01-13, by Ted Harrison, then President of FontLab Inc.</span></p>
 
   <p class="c0"><span>&nbsp;</span></p>
 
