--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ ol,.c20
 
   <p class="c0"><span>2010-01-13, by Ted Harrison, then President of FontLab Inc.</span></p>
 
-  <p class="c0"><span>&nbsp;</span></p>
+  <p class="c0"><span>To learn more, see <a href="https://github.com/googlefonts/fontbakery/issues/818">https://github.com/googlefonts/fontbakery/issues/818</a></span></p>
 
   <p class="c0"><span>This document lists the information needed for a EEULAA. I am using
   the information in both the</span> <span class="c22"><a class="c17" href=
